Cambios en Home y Nosotros

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>    
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="SASS/Estilos.css"> 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>    
     <meta name="description" content="Este es el sitio web de mi consultorio de kinesiología donde ofrecemos diferentes tecncias de rehabilitación para patologías">   
     <meta name="keywords"  content="KINESIOLOGÍA, TÉCNICAS, FNP, OSTEOPATÍA, MUSCULAR, REHABILITACIÓN, DEPORTE">
-    <meta name="google-site-verification" content="w39xpNM4-uNzhruMsnyLWczHk0gjVkDrCAa5iNAqWM4" />
+    <meta name="google-site-verification" content="w39xpNM4-uNzhruMsnyLWczHk0gjVkDrCAa5iNAqWM4">
+    <link rel="stylesheet" href="SASS/Estilos.css"> 
 
 </head>
 
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="Contacto.html">Contacto <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="Productos.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="dropdown-toggle" href="Productos.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Productos
                     </a>   
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -161,9 +161,9 @@
 
                             <p class="jumbotron__texto">Técnicas terapéuticas que favorecen la recuperación del organismo, tanto a nivel físico, emocional y energético. Aunque también se utiliza para resolver problemas vinculados con los músculos y los huesos, y por eso hablamos de aplicaciones de kinesiología en fisioterapia, esta disciplina es muy extensa y alcanza niveles más profundos.</p>
 
-                            <div type="button" href="#" role="button"class="jumbotron__button">    
+                            <div type="button"  role="button"class="jumbotron__button">    
 
-                                <a>Ir a sección</a>
+                                <a href="Tecnicas.html">Ir a sección</a>
 
                             </div>
 
@@ -175,9 +175,9 @@
 
                             <p class="jumbotron__texto">Ofrecemos a nuestros clientes la posibilidad de adquirir algunos de los elementos utilizados durante las sesiones para poder generar la continuacion del tratamiento desde su hogar.</p>
                                     
-                            <div type="button" href="#" role="button"class="jumbotron__button">   
+                            <div type="button"  role="button"class="jumbotron__button">   
 
-                                <a>Ir a sección</a>
+                                <a href="Productos.html">Ir a sección</a>
 
                             </div>
 
@@ -192,7 +192,7 @@
         <div class="footer__barra"></div>          
         <section class="container__footer"> 
              
-            <a  href="index.html"><img class="navbar__logo" src="Imagenes/logo.png"></a>
+            <a  href="index.html"><img class="footer__logo" src="Imagenes/logo.png"></a>
 
                 <div class="footer__info">
                     <p>
@@ -220,9 +220,9 @@
                         </ul>
 
                         <ul class="linksRedes">
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li ><a href="https://www.facebook.com/">/KHK</a></li>
+                            <li ><a href="https://www.youtube.com">/KHK</a></li>
+                            <li ><a href="https://www.instagram.com">@KHK</a></li>
                         </ul>
 
                     </div>  
