--- a/Ubicacion.html
+++ b/Ubicacion.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="Contacto.html">Contacto <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="Productos.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" href="Productos.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Productos
                         </a>   
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
