Tecnicas y Nosotros modificados

--- a/Tecnicas.html
+++ b/Tecnicas.html
@@ -107,8 +107,9 @@
                         Mejorar la calidad de vida y una recuperación más rápida.
                     </li>
                 </ol>
-                          
-                
+
+            </div>  
+            <div class="container_table">
                 <table class="tecnicas1__table">
                     <tr>
                         <th>Nombre</th>
@@ -152,9 +153,8 @@
                         <td>3 veces por semana</td>
                         <td>5</td>
                     </tr>  
-                </table> 
-            </div>      
-
+                </table>     
+            </div>
     </section>
 
     <section class="main__tecnicas2">
