--- a/Nosotros.html
+++ b/Nosotros.html
@@ -120,49 +120,49 @@
         <div class="main__containerNosotros2">
             <div class="containerNosotros2__info">
                 <a name="planeamiento"></a>
-                    <div class="informacion">
+                    <div class="info__nosotros">
                         <h2 class="planeamiento">Planeamiento:</h2>
                             <p>Llevamos a cabo una evaluación específica, buscando planificar un tratamiento 
                             efectivo y precoz para atender rapidamente la patología o afección.</p>
                     </div>    
                 <a name="seguimiento"></a>
-                    <div class="informacion">      
+                    <div class="info__nosotros">      
                         <h2 class="seguimiento">Seguimiento:</h2>
                             <p>Contamos con un servicio de seguimiento una vez finalizado el tratamiento que permite realizar 
                             consultas esporádicas para asegurar una rehabilitación exitosa.</p>
                     </div>
                 <a name="controlDeCasos"></a>
-                    <div class="informacion">
+                    <div class="info__nosotros">
                         <h2 class="controlDeCasos">Control de casos:</h2>
                             <p>Llevamos a cabo un control de nuestros pacientes respetando los 
                             protocolos necesarios para poder realizar una correcta rehabilitación.</p>
                         </div>
                 <a name="profesionales"></a>
-                    <div class="informacion">        
+                    <div class="info__nosotros">        
                         <h2 class="profesionales">Profesionales:</h2>
                             <p>Contamos con un grupo de profesionales 
                             especializados en diferentes areas de la kinesiología.</p>
                     </div>
                 <a name="historia"></a>
-                    <div class="informacion">      
+                    <div class="info__nosotros">      
                         <h2 class="historia">Historia:</h2>
                             <p>Brindamos servicios desde el año 2021,
                             en nuestro establecimiento principal.</p>
                     </div>
                 <a name="tecnicas"></a> 
-                    <div class="informacion">       
+                    <div class="info__nosotros">       
                         <h2 class="tecnicas">Técnicas:</h2>
                             <p>Abordamos cada caso con una amplia aplicación 
                             de técnicas elabaradas por nuestros profesionales.</p>
                     </div>
                 <a name="accesibilidad"></a> 
-                    <div class="informacion">               
+                    <div class="info__nosotros">               
                         <h2 class="accesibilidad">Accesibilidad:</h2>
                             <p>Nuestras instalaciones cuentan con accesos 
                             cómodos y seguros para todos nuestros visitantes.</p>
                     </div>
                 <a name="materiales"></a>
-                    <div class="informacion">
+                    <div class="info__nosotros">
                         <h2 class="materiales">Materiales:</h2>
                         <p>Contamos con una gran variedad de elementos dentro de
                          nuestro establecimiento y brindamos venta de los mismos.</p>
@@ -171,7 +171,7 @@
 
                 <a name="servicios"></a> 
 
-                    <div class="informacion">                   
+                    <div class="info__nosotros">                   
                         <h2 class="servicios">Servicios:</h2>
                             <p>Brindamos diversas actvidades para poder lograr suplir todas las necesidades 
                             que pueda llegar a surgir durante un tratamiento.?</p>
@@ -179,7 +179,7 @@
 
                 <a name="consultas"></a> 
 
-                    <div class="informacion">                  
+                    <div class="info__nosotros">                  
                         <h2 class="consultas">Consultas:</h2>
                             <p>Disponemos de diferentes medios 
                             por los cuales pueden establecer y transmitir sus dudas.</p>
@@ -187,7 +187,7 @@
 
                 <a name="sesionesVirtuales"></a>
 
-                    <div class="informacion">
+                    <div class="info__nosotros">
 
                         <h2 class="sesionesVirtuales">Sesiones Virtuales:</h2>
                             <p>Contamos con un serivicio de sesiones virtuales a traves de distintas plataformas 
