--- a/Tecnicas.html
+++ b/Tecnicas.html
@@ -109,7 +109,7 @@
                 </ol>
 
             </div>  
-            <div class="container_table">
+            <div class="container__table">
                 <table class="tecnicas1__table">
                     <tr>
                         <th>Nombre</th>
